update F04-content-administration
